2008-02-08  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7449: Frontend editing fails due to undefined method in t3lib_BEfunc
	
2008-02-07  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #4588: Frontend htmlArea RTE loads global RTE config instead of function parameter $thisConfig
	* Fixed bug #7450: htmlArea RTE: localization is broken when the RTE is used by a frontend plugin
	* Fixed bug #7451: htmlArea RTE: BE localization is broken

2008-02-07  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #7383: Added option to delete unused marker in parsehtml::substituteMarkerArray (thanks to Steffen Kamper)

2008-02-06  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug: IRRE - Deleted records are added to array of related records

2008-02-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7419: htmlArea RTE: Localization error in Remove Format plugin
	* Fixed bug #7421: htmlArea RTE: typographical error in localization file
	* Fixed bug #7052: Permission problem of htmlArea RTE images
	* Fixed bug #7052 (revisited): Permission problem of htmlArea RTE images, using t3lib_div::fixPermissions
	* Fixed bug #7428: htmlArea RTE: hiding a button hides the whole group
	* Fixed bug #5659: Several bugs when writing HTML entities and tags inside of htmlArea RTE
	* Fixed bug #3830: htmlArea RTE: Entities entered in wysiwyg are decoded

2008-02-05  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug: Wrong type of argument on calling t3lib_div::compileSelectedGetVarsFromArray() (related to #7350)

2008-02-05  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0beta1

2008-02-05  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed #7391: cannot set key in $_GET with t3lib_div::_GETset()

2008-02-05  Ingo Renner  <ingo@typo3.org>

	* fixed: backend.php closed body and html elements two times
	* removd ugly background color from buttons in the docheader
	* moved t3skin arrow icons to main typo3/gfx folder