@@ -1,7 +1,11 @@
+2008-02-07  Ingo Renner  <ingo@typo3.org>
+
+	* fixed bug 7333: Better solution for "Page is being generated", credits Bernhard Kraft and Michael Stucki
+
 2008-02-08  Jeff Segars  <jeff@webempoweredchurch.org>
 
 	* Fixed bug #7449: Frontend editing fails due to undefined method in t3lib_BEfunc
-	
+
 2008-02-07  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* Fixed bug #4588: Frontend htmlArea RTE loads global RTE config instead of function parameter $thisConfig
